--- a/фреймы.html
+++ b/фреймы.html
@@ -1,7 +1,7 @@
 <html>
 <frameset rows="100%, 100%, 100%">
-    <frame src="file:///C:/Users/юзер/Desktop/ВКН/html/Что.html">
-    <frame src="file:///C:/Users/юзер/Desktop/ВКН/html/направления.html">
-    <frame src="file:///C:/Users/юзер/Desktop/ВКН/html/зарплаты.html">
+    <frame src="Что.html">
+    <frame src="направления.html">
+    <frame src="зарплаты.html">
 </frameset>
 </html>
