--- a/зарплаты.html
+++ b/зарплаты.html
@@ -37,7 +37,7 @@
         </style>
 </head>
 <body>
-    <link rel="stylesheet" type="text/css" href="file:///C:/Users/юзер/Desktop/ВКН/html/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <div style="width: 1900px;" allign="justify">
         <div style="width: 850px; height: 100px; margin: 10px auto;">
             <font size="7" color="white" face="Arial" class="primer1">
