--- a/Что.html
+++ b/Что.html
@@ -38,8 +38,8 @@
 </head>
 <body>
     <div class="rectangle text_center_middle"></div>
-    <link rel="stylesheet" type="text/css" href="file:///C:/Users/юзер/Desktop/ВКН/html/style.css" />
-    <a href="file:///C:/Users/юзер/Desktop/ВКН/html/сайт.html"> <img src="10.jpg" width="100" height="100" style="border-radius:200px" align="top"> </a>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <a href="сайт.html"> <img src="10.jpg" width="100" height="100" style="border-radius:200px" align="top"> </a>
 
     <div style="width: 1900px;" allign="justify">
         <div style="width: 850px; height: 100px; margin: 10px auto;">
